<resources>
    <string name="app_name">Date Set</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="log_in">로그인</string>
    <string name="register"><u>회원가입</u></string>
    <string name="register_not_underline1">회원가입(1/3)</string>
    <string name="register_not_underline2">회원가입(2/3)</string>
    <string name="register_not_underline3">회원가입(3/3)</string>
    <string name="find_id_pw"><u>아이디/비밀번호찾기</u></string>
    <string name="name_of_app">DateSet</string>
    <string name="double_check">중복확인</string>
    <string name="necessary_info"> *필수정보입니다.</string>
    <string name="certification">인증</string>
    <string name="certification_num">인증번호</string>
    <string name="confirm">확인</string>
    <string name="write">작성</string>
    <string name="register_complete1">다음(1/3)</string>
    <string name="register_complete2">다음(2/3)</string>
    <string name="register_complete3">회원가입완료</string>
    <string name="inv_code">초대코드</string>
    <string name="opponent_inv_code">상대방 초대코드</string>
    <string name="opponent_id">상대방 아이디</string>
    <string name="opponent_id_enter">연결할 상대방 아이디를 입력하세요</string>
    <string name="first_day">처음 사귄날</string>
    <string name="private_info"><u>개인정보 처리방침에 동의합니다(필수)</u></string>

    <string name="find_id">아이디 찾기</string>
    <string name="name">이름</string>
    <string name="phone_num">전화번호</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="email_id">이메일(아이디)</string>
    <string name="nick_name">닉네임</string>
    <string name="date">날짜</string>

    <string name="next">다음</string>
    <string name="post">게시하기</string>
    <string name="modify">수정하기</string>
    <string name="back">뒤로가기</string>
    <string name="comment">댓글달기</string>
    <string name="comment_view">댓글</string>

    <string name="my_page"> 내정보</string>
    <string name="replace"> 교체</string>
    <string name="replace_complete"> 변경완료</string>

    <string name="added_function"> 부가기능</string>
    <string name="recommend_restaurant"> 맛집추천</string>
    <string name="find_restaurant"> 맛집찾기</string>
    <string name="calendar"> 캘린더</string>
    <string name="weather"> 날씨</string>
    <string name="percentOfRain">강수확률</string>
    <string name="chatting"> 채팅</string>
    <string name="chatting_writing"> 채팅작성</string>
    <string name="transmit"> 전송</string>
    <string name="image_video_selection"> 이미지/동영상 선택</string>
    <string name="image_selection"> 이미지선택</string>

    <string name="date_place_weather"> 날짜/장소/날씨</string>
    <string name="add_anniversary"> 기념일 추가</string>
    <string name="add_schedule"> 일정 추가</string>
    <string name="pre_anniversary"> 지난 기념일</string>
    <string name="next_anniversary"> 남은 기념일</string>

    <string name="day">요일</string>
    <string name="lowest_highest_temp">최저기온/최고기온</string>
    <string name="precipitation">강수량</string>
    <string name="title_activity_calendar">CalendarActivity</string>

    <string name="title_activity_ex">DateSet</string>
    <string name="pw_validation">비밀번호는 10-16자사이 영문/숫자/특수문자를 모두 포함하셔야 합니다..</string>

    <string name="channel_name_chatting">chatting_channel</string>
    <string name="channel_description_chatting">chatting_channel</string>


    <string-array name="photoOrImageWithoutRemove">
        <item>직접촬영</item>
        <item>갤러리에서 가져오기</item>
    </string-array>

    <string-array name="photoOrImageOrRemove">
        <item>직접촬영</item>
        <item>갤러리에서 가져오기</item>
        <item>삭제하기</item>
    </string-array>

    <string-array name="postFunc">
        <item>게시물 수정</item>
        <item>게시물 삭제</item>
    </string-array>

    <string-array name="commentFunc">
        <item>댓글 수정</item>
        <item>댓글 삭제</item>
    </string-array>

    <string-array name="addCalendarFunc">
        <item>일정 추가</item>
        <item>기념일 추가</item>
    </string-array>

    <string-array name="schRepeat">
        <item>안함</item>
        <item>매일</item>
        <item>매주</item>
        <item>매달</item>
        <item>매년</item>
        <item>평일</item>
        <item>주말</item>
    </string-array>

    <string-array name="schAlarm">
        <item>없음</item>
        <item>일정 시작 시간</item>
        <item>10분전</item>
        <item>1시간전</item>
        <item>1일전</item>
        <item>3일전</item>
        <item>1주일전</item>
    </string-array>

    <string-array name="anniversaryAlarm">
        <item>없음</item>
        <item>당일[오전 09:00]</item>
        <item>1일전[오전 09:00]</item>
        <item>3일전[오전 09:00]</item>
        <item>1주일전[오전 09:00]</item>
        <item>10일전[오전 09:00]</item>
        <item>2주일전[오전 09:00]</item>
    </string-array>

    <string-array name="weather">
        <item>날씨</item>
        <item>맑음</item>
        <item>구름조금</item>
        <item>흐림</item>
        <item>비내림</item>
        <item>눈내림</item>
        <item>천둥번개침</item>
        <item>안개낌</item>
        <item>소나기내림</item>
        <item>미세먼지많음</item>
    </string-array>

    <string name="title_activity_post_modify">PostModifyActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>