<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--
    1. android:backgroundTint: editText라인색 변경
    -->

    <include layout="@layout/include_main_upper2"/>

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:backgroundTint="@color/orange"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/editTextNumber_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/orange"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/orange"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:layout_gravity="center" />

<!--    <ImageButton
        android:id="@+id/btn_kakao_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@null"
        app:srcCompat="@drawable/login_kakao_login_medium_narrow"
        android:layout_gravity="center"/>-->

    <TextView
        android:id="@+id/textView_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/black"
        android:text="@string/register"
        android:textColor="@color/black"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/textView_find_id_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/find_id_pw"
        android:textColor="@color/black"
        android:layout_gravity="center" />
</LinearLayout>