<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/include_upper"
        layout="@layout/include_main_upper"></include>

    <TextView
        android:id="@+id/textView_added_function"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/added_function"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_upper" />

    <Button
        android:id="@+id/btn_find_restaurant"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="448dp"
        android:backgroundTint="@color/orange"
        android:text="@string/recommend_restaurant"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_calendar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="448dp"
        android:backgroundTint="@color/orange"
        android:text="@string/calendar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_find_restaurant" />


    <Button
        android:id="@+id/btn_weather"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="448dp"
        android:backgroundTint="@color/orange"
        android:text="@string/weather"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toEndOf="@+id/btn_calendar" />

    <include
        android:id="@+id/include_bottom"
        layout="@layout/include_main_bottom"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"></include>
</androidx.constraintlayout.widget.ConstraintLayout>