<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<!--    <include
        android:id="@+id/include_upper"
        layout="@layout/include_main_upper"></include>-->

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:background="@null"
        app:srcCompat="@drawable/common_back"
        app:layout_constraintTop_toBottomOf="@+id/include_upper"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView_chatting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chatting"
        android:textSize="20dp"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/include_upper"
        app:layout_constraintStart_toEndOf="@+id/btn_back"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/layout_chatting_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">

        <ImageButton
            android:id="@+id/btn_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/call_48"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@null" />

    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/orange"
        app:layout_constraintTop_toBottomOf="@+id/btn_back"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/layout_chatting_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1">

        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="12월 27일"
            android:textAlignment="center"></TextView>-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_chat_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"></androidx.recyclerview.widget.RecyclerView>

        <!--<include layout="@layout/view_chatting_chatbox"></include>-->

    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/orange"
        app:layout_constraintBottom_toTopOf="@id/layout_chatting_write"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/layout_chatting_write"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editText_chatting_writing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@null"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/chatting_writing"
            android:inputType="textMultiLine"
            android:maxLines="5" />

        <Button
            android:id="@+id/btn_write"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/transmit"
            android:textColor="@color/black"
            android:textSize="15dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
<!--
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/include_upper"
        layout="@layout/include_main_upper"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:background="@null"
            app:srcCompat="@drawable/common_back" />

        <TextView
            android:id="@+id/textView_chatting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/chatting"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/orange" />

&lt;!&ndash;    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_chat_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    </androidx.recyclerview.widget.RecyclerView>&ndash;&gt;

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="12월 27일"
            android:textAlignment="center"></TextView>

        <include layout="@layout/view_chatting_chatbox"></include>

        <include layout="@layout/view_chatting_chatbox2"></include>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/orange" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_chatting_writing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="10"
            android:gravity="start|top"
            android:background="@null"
            android:text="@string/chatting_writing"
            android:maxLines="5"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btn_write"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textSize="15dp"
            android:backgroundTint="@color/orange"
            android:textColor="@color/black"
            android:text="@string/transmit" />
    </LinearLayout>
</LinearLayout>-->
